# career_conversation

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  start.sh  status.sh  stop.sh
backend/: chat.py  main.py  models.py  tools.py
docs/plans/: 2026-02-23-quoted-reply-bubble-design.md  2026-02-23-quoted-reply-bubble.md  2026-02-23-reply-quote-design.md  2026-02-23-reply-quote.md  2026-02-24-sanity-integration-design.md  2026-02-24-sanity-integration.md  2026-02-25-semantic-dedup-contact-flow.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: api.test.ts  api.ts  main.test.ts  main.ts  reply.test.ts  reply.ts  style.css
me/: summary.txt
sanity/: README.md  package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
sanity/schemas/: index.ts  profile.ts
tests/: test_chat.py  test_main.py  test_models.py  test_tools.py
